<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_filter_generic">
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_format_list_bulleted_24"
            app:key="filter.logfiles.enabled"
            app:summary="@string/systemcleaner_filter_logfiles_summary"
            app:title="@string/systemcleaner_filter_logfiles_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_ads_click_24"
            app:key="filter.advertisements.enabled"
            app:summary="@string/systemcleaner_filter_advertisements_summary"
            app:title="@string/systemcleaner_filter_advertisements_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_folder_open_24"
            app:key="filter.emptydirectories.enabled"
            app:summary="@string/systemcleaner_filter_emptydirectories_summary"
            app:title="@string/systemcleaner_filter_emptydirectories_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_app_extra_24"
            app:key="filter.superfluosapks.enabled"
            app:summary="@string/systemcleaner_filter_superfluosapks_summary"
            app:title="@string/systemcleaner_filter_superfluosapks_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_usb_24"
            app:key="filter.lostdir.enabled"
            app:summary="@string/systemcleaner_filter_lostdir_summary"
            app:title="@string/systemcleaner_filter_lostdir_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_usb_24"
            app:key="filter.linuxfiles.enabled"
            app:summary="@string/systemcleaner_filter_linuxfiles_summary"
            app:title="@string/systemcleaner_filter_linuxfiles_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_usb_24"
            app:key="filter.macfiles.enabled"
            app:summary="@string/systemcleaner_filter_macfiles_summary"
            app:title="@string/systemcleaner_filter_macfiles_label" />
        <CheckBoxPreference
            app:icon="@drawable/image_multiple"
            app:key="filter.thumbnails.enabled"
            app:summary="@string/systemcleaner_filter_thumbnails_summary"
            app:title="@string/systemcleaner_filter_thumbnails_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_access_time_filled_24"
            app:key="filter.tempfiles.enabled"
            app:summary="@string/systemcleaner_filter_tempfiles_summary"
            app:title="@string/systemcleaner_filter_tempfiles_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_eye"
            app:key="filter.analytics.enabled"
            app:summary="@string/systemcleaner_filter_analytics_summary"
            app:title="@string/systemcleaner_filter_analytics_label" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_filter_specific">
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_running_with_errors_24"
            app:key="filter.anr.enabled"
            app:summary="@string/systemcleaner_filter_anr_summary"
            app:title="@string/systemcleaner_filter_anr_label" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_downloading_24"
            app:key="filter.cachepartition.enabled"
            app:summary="@string/systemcleaner_filter_cachepartition_summary"
            app:title="@string/systemcleaner_filter_cachepartition_label" />

    </PreferenceCategory>

</PreferenceScreen>