<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <Preference
        android:icon="@drawable/ic_baseline_settings_24"
        app:fragment="eu.darken.sdmse.main.ui.settings.general.GeneralSettingsFragment"
        app:summary="@string/general_settings_desc"
        app:title="@string/general_settings_label" />

    <PreferenceCategory android:title="@string/settings_category_tools_label">
        <Preference
            android:icon="@drawable/ghost"
            app:fragment="eu.darken.sdmse.corpsefinder.ui.settings.CorpseFinderSettingsFragment"
            app:summary="@string/corpsefinder_settings_summary"
            app:title="@string/corpsefinder_tool_name" />
        <Preference
            android:icon="@drawable/ic_baseline_view_list_24"
            app:fragment="eu.darken.sdmse.systemcleaner.ui.settings.SystemCleanerSettingsFragment"
            app:summary="@string/systemcleaner_explanation_short"
            app:title="@string/systemcleaner_tool_name" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_other_label">
        <Preference
            android:icon="@drawable/ic_changelog_onsurface"
            android:key="core.changelog"
            android:title="@string/changelog_label"
            app:summary="v?.?.?">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/d4rken-org/sdmaid-se/releases" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_baseline_contact_support_24"
            app:fragment="eu.darken.sdmse.main.ui.settings.support.SupportFragment"
            app:summary="¯\\_(ツ)_/¯"
            app:title="@string/settings_support_label" />

        <Preference
            android:icon="@drawable/ic_heart"
            app:fragment="eu.darken.sdmse.main.ui.settings.acks.AcknowledgementsFragment"
            app:summary="@string/general_thank_you_label"
            app:title="@string/settings_acknowledgements_label" />

        <Preference
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:key="core.privacy"
            app:summary="@string/settings_privacy_policy_desc"
            app:title="@string/settings_privacy_policy_label" />

        <Preference
            android:icon="@drawable/ic_baseline_stars_24"
            android:key="core.sponsor.development"
            app:isPreferenceVisible="false"
            app:summary="@string/settings_sponsor_development_summary"
            app:title="@string/settings_sponsor_development_title"
            tools:isPreferenceVisible="true" />

    </PreferenceCategory>
</PreferenceScreen>