<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_category_tools_label"
        app:isPreferenceVisible="false">

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/stats_settings_retention_category">
        <Preference
            app:icon="@drawable/chart_box_outline_24"
            app:key="retention.reports"
            app:singleLineTitle="false"
            app:summary="@string/stats_settings_retention_reports_desc"
            app:title="@string/stats_settings_retention_reports_label" />
        <Preference
            app:icon="@drawable/ic_file_chart_outline_24"
            app:key="retention.paths"
            app:singleLineTitle="false"
            app:summary="@string/stats_settings_retention_paths_desc"
            app:title="@string/stats_settings_retention_paths_label" />
        <Preference
            app:icon="@drawable/baseline_settings_backup_restore_24"
            app:key="reports.size"
            app:singleLineTitle="false"
            app:summary="~"
            app:title="@string/stats_settings_reset_all_label" />
    </PreferenceCategory>

</PreferenceScreen>