<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="swipe.directions.swapped"
            android:summary="@string/swiper_settings_swap_directions_summary"
            android:title="@string/swiper_settings_swap_directions_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="swipe.details.overlay.enabled"
            android:summary="@string/swiper_settings_show_details_summary"
            android:title="@string/swiper_settings_show_details_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="swipe.haptic.enabled"
            android:summary="@string/swiper_settings_haptic_feedback_summary"
            android:title="@string/swiper_settings_haptic_feedback_title"
            app:iconSpaceReserved="false" />

</PreferenceScreen>
