<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.darken.sdmse.common.preferences.BadgedCheckboxPreference
        app:enabled="false"
        app:icon="@drawable/ic_weight_24"
        app:key="module.sizing.enabled"
        app:singleLineTitle="false"
        app:summary="@string/appcontrol_settings_module_sizing_enabled_description"
        app:title="@string/appcontrol_settings_module_sizing_enabled_label" />

    <eu.darken.sdmse.common.preferences.BadgedCheckboxPreference
        app:enabled="false"
        app:icon="@drawable/ic_run_24"
        app:key="module.activity.enabled"
        app:singleLineTitle="false"
        app:summary="@string/appcontrol_settings_module_activity_enabled_description"
        app:title="@string/appcontrol_settings_module_activity_enabled_label" />

    <eu.darken.sdmse.common.preferences.BadgedCheckboxPreference
        app:icon="@drawable/ic_account_group_24"
        app:key="include.multiuser.enabled"
        app:singleLineTitle="false"
        app:summary="@string/appcleaner_include_multiuser_summary"
        app:title="@string/appcleaner_include_multiuser_label" />
</PreferenceScreen>