<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.darken.sdmse.main.ui.MainActivity">

    <item
        android:id="@+id/menu_action_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:orderInCategory="100"
        android:title="@string/general_info_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_import"
        android:icon="@drawable/ic_file_import_outline_24"
        android:orderInCategory="100"
        android:title="@string/exclusion_import_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_restore_default_exclusions"
        android:icon="@drawable/baseline_settings_backup_restore_24"
        android:orderInCategory="100"
        android:title="@string/exclusion_reset_default_exclusions"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_show_defaults"
        android:checkable="true"
        android:checked="false"
        android:title="@string/exclusion_show_defaults_action"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />

</menu>
