<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/support_debuglog_folder_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        style="@style/BaseRecyclerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxHeight="400dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:listitem="@layout/debug_log_sessions_item" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/empty_label"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/support_debuglog_folder_empty_desc"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_all_action"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/support_debuglog_folder_delete_confirmation_title"
        app:icon="@drawable/ic_delete"
        app:iconGravity="textStart" />

</LinearLayout>
